fixtures/deployment/ingressroute.yaml
---
apiVersion: v1
items:
- apiVersion: contour.heptio.com/v1beta1
  kind: IngressRoute
  metadata:
    annotations:
      kubernetes.io/ingress.class: contour-public
    name: hello
    namespace: f4tq

  spec:
    routes:
    - hashPolicy: []
      match: "/"
      perFilterConfig:
        envoy.filters.http.header_size:
          header_size:
            max_bytes: 8192
        envoy.filters.http.ip_allow_deny:
          allow_cidrs:
          - address_prefix: 192.150.10.192
            prefix_len: 27
      requestHeadersPolicy:
        set:
        - name: x-forwarded-tls-version
          value: __percent__DOWNSTREAM_TLS_VERSION__percent__
        - name: x-forwarded-tls-cipher
          value: __percent__DOWNSTREAM_TLS_CIPHER__percent__
      responseHeadersPolicy:
        set:
        - name: x-envoy-upstream-remote-address
          value: __percent__UPSTREAM_REMOTE_ADDRESS__percent__
      retryPolicy:
        count: 3
        perTryTimeout: 150ms
      hashPolicy:
      - cookie:
          name: affinity
          path: /
          ttl: 1m0s
        terminal: true
      idleTimeout: 5m0s
      services:
      - healthCheck:
          healthyThresholdCount: 4
          intervalSeconds: 5
          path: "/health"
          timeoutSeconds: 2
          unhealthyThresholdCount: 3
        name: hello
        port: 3000
      timeoutPolicy:
        request: infinity
    - headerMatch:
      - contains: foo=bar
        name: :path
      match: "/"
      prefixRewrite: "/ping"
      services:
      - name: hello
        port: 3000
    - headerMatch:
      - exact: GET
        name: :method
      match: "/node/"
      prefixRewrite: "/"
      services:
      - healthCheck:
          healthyThresholdCount: 4
          intervalSeconds: 5
          path: "/health"
          timeoutSeconds: 2
          unhealthyThresholdCount: 3
        name: hello
        port: 3001
    - match: "/source_ip_policy"
      permitInsecure: true
      prefixRewrite: "/"
      services:
      - name: hello2
        port: 3002
      hashPolicy:
      - connectionProperties:
          sourceIp: true

    - match: "/cookie_policy/"
      permitInsecure: true
      prefixRewrite: "/"
      services:
      - name: hello2
        port: 3002
      hashPolicy:
      - cookie:
          name: affinity
          path: /
          ttl: 1m0s
        terminal: true

    - match: "/http2/"
      permitInsecure: true
      prefixRewrite: "/"
      services:
      - name: hello2
        port: 3002
    - match: "/http2/tls/"
      prefixRewrite: "/"
      services:
      - name: hello2
        port: 3003
    virtualhost:
      fqdn: f4tq.sandbox.cloud.adobe.io
      tls:
        maximumProtocolVersion: "1.2"
        secretName: cluster-ssl-x-sandbox-cloud-adobe-io 
        cipherSuites:
        - "TLS_RSA_WITH_AES_256_GCM_SHA384|TLS_RSA_WITH_AES_256_CBC_SHA"
        - TLS_RSA_WITH_AES_128_GCM_SHA256
  status:
    currentStatus: valid
    description: valid IngressRoute
kind: List
metadata: {}
